<resources>
    <string name="app_name">Family Map Client</string>
    <string name="server_host_string">Server Host:</string>
    <string name="server_port_string">Server Port:</string>
    <string name="user_name_string">User Name:</string>
    <string name="password_string">Password:</string>
    <string name="first_name_string">First Name:</string>
    <string name="last_name_string">Last Name:</string>
    <string name="email_string">Email:</string>
    <string name="gender_string">Gender:</string>
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>
    <string name="login_string">Login</string>
    <string name="register_string">Register</string>
    <string name="marker_display_default">Click on a marker to see event details</string>
    <string name="text_view_test">Default</string>
    <string name="first_name_person_activity">First Name</string>
    <string name="last_name_person_activity">Last Name</string>
    <string name="gender_person_activity">Gender</string>
    <string name="life_events_person_activity">Life Events</string>
    <string name="family_person_activity">Family</string>
    <string name="gender_icon_description">Gender icon</string>
    <string name="Settings_1_top">Life Story Lines</string>
    <string name="Settings_1_bottom">SHOW LIFE STORY LINES</string>
    <string name="Settings_2_top">Family Tree Lines</string>
    <string name="Settings_2_bottom">SHOW FAMILY TREE LINES</string>
    <string name="Settings_3_top">Spouse Lines</string>
    <string name="Settings_3_bottom">SHOW SPOUSE LINES</string>
    <string name="Settings_4_top">Father\'s Side</string>
    <string name="Settings_4_bottom">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="Settings_5_top">Mother\'s Side</string>
    <string name="Settings_5_bottom">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="Settings_6_top">Male Events</string>
    <string name="Settings_6_bottom">FILTER EVENTS BASED ON GENDER</string>
    <string name="Settings_7_top">Female Events</string>
    <string name="Settings_7_bottom">FILTER EVENTS BASED ON GENDER</string>
    <string name="logout_top">Logout</string>
    <string name="logout_bottom">RETURN TO LOGIN SCREEN</string>
    <string name="title_activity_event">Family Map: Event</string>
    <string name="title_activity_person">Family Map: Person</string>
    <string name="title_activity_main">Family Map Client</string>
    <string name="title_activity_search">Family Map: Search</string>
    <string name="title_activity_settings">Family Map: Settings</string>
    <string name="events_title">LIFE EVENTS</string>
    <string name="family_title">FAMILY</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
</resources>